--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
-body {
-    background-color: green;
-  }
-
   * {
     box-sizing: border-box;
+  }
+
+  body {
+    background-color: green;
+    font-size: 24px;
   }
